# remaku

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  README_zh-CN.md  README_zh-TW.md  Remaku.manifest  V1.md  build_exe.ps1  installer.iss  main.py  pyproject.toml
.claude/agents/: coverage-line-auditor.md  coverage-test-engineer.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
hooks/: hook-rapidocr_onnxruntime.py
remaku/: paths.py  theme.py  version.py
remaku/config/: manager.py  models.py
remaku/controllers/: home_controller.py  macro_explorer_controller.py  main_controller.py  pack_explorer_controller.py  settings_controller.py
remaku/core/: __init__.py  capture.py  dialogs.py  display.py  event_bus.py  i18n.py  keymap.py  keys.py  ocr.py  vision.py  window.py
remaku/models/: config_model.py  macro_model.py  pack_model.py  (+3 more)
scripts/: build.ps1  lrelease.ps1  lupdate.ps1  release-note.ps1
src/: capture.py  config.py  icons.py  keys.py  macro_engine.py  main.py  main_window.py  overlay.py  region_selector.py  runner.py  settings.py  step_node.py  step_tree.py  updater.py  version.py  vision.py  window.py
tests/: conftest.py  test_capture.py  test_config.py  test_i18n.py  test_icons.py  test_keys.py  test_macro_engine.py  test_main.py  test_main_window_logic.py  test_main_window_qt.py  test_overlay.py  test_paths.py  test_region_selector.py  test_resources.py  test_runner.py  test_settings.py  test_step_node.py  test_step_tree.py  test_theme.py  test_updater.py  test_vision.py  test_window.py
(+100 files in other folders)
