[project]
name = "remaku"
version = "0.3.0"
description = "Open-source visual macro automation tool with image recognition"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12,<3.13"
dependencies = [
  "bettercam>=1.0",
  "loguru>=0.7",
  "numpy>=2.0",
  "opencv-python-headless>=4.10",
  "pydirectinput-rgx>=2.1",
  "pygetwindow>=0.0.9",
  "pyside6>=6.7",
  "PySide6-Fluent-Widgets>=1.7.0",
  "pywin32>=306",
]

[dependency-groups]
dev = [
  "pre-commit>=4.0",
  "pyinstaller>=6.10",
  "pyright>=1.1.409",
  "pytest>=8.0",
  "pytest-cov>=7.1.0",
  "pytest-qt>=4.5.0",
  "ruff>=0.15.15",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM", "C4", "PT", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
testpaths = ["tests"]
